--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -22,6 +22,11 @@
     <string name="title_friends">Friends</string>
     <string name="title_home">Home</string>
 
+    <string name = "main_activity_button_gallery">Галерея</string>
+    <string name="main_activity_button_camera">Камера</string>
+    <string name="data_color_button_send_result">Отправить результат на Сервер</string>
+    <string name="main_activity_information">SD карта не доступна</string>
+
     <!-- data in fragment_data_color-->
 
     <string name="title_fragment_data_color">Данные о среднем цвете:</string>
