--- a/app/src/main/res/layout/fragment_data_color.xml
+++ b/app/src/main/res/layout/fragment_data_color.xml
@@ -141,16 +141,16 @@
         android:layout_height="101dp"
         android:background="@color/background"
         android:layout_marginTop="87dp"
-        android:layout_toRightOf="@+id/hsl_data_text_view"
-        android:layout_marginLeft="50dp"/>
+        android:layout_marginLeft="220dp"
+        />
 
     <ImageView
         android:id="@+id/image_color"
         android:layout_width="95dp"
         android:layout_height="95dp"
         android:layout_marginTop="90dp"
-        android:layout_toRightOf="@+id/hsl_data_text_view"
-        android:layout_marginLeft="53dp"/>
+        android:layout_marginLeft="223dp"
+        />
     <!--android:background="#FF80AB"-->
 
     <Button
@@ -160,8 +160,8 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/hsl_data_text_view"
-        android:text="Send result to Server"
-        android:id="@+id/button" />
+        android:text="@string/data_color_button_send_result"
+        android:id="@+id/send_result" />
 
     <ImageView
         android:id="@+id/image_transparent"
