--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/card_view_layout"
+        android:visibility="visible"
         />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
