--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
             layout="@layout/toolbar" />
     </LinearLayout>
 
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -74,6 +75,12 @@
             fab:fab_title="@string/main_activity_button_camera"/>
 
     </cc.trity.floatingactionbutton.FloatingActionsMenu>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/name_composition_layout"/>
+
 
 
 </RelativeLayout>
