--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -13,10 +13,13 @@
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="5dp">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:id="@+id/liner_layout"
+        android:orientation="vertical"
+        android:visibility="visible">
 
        <ImageView
             android:id="@+id/imageView"
