--- a/app/src/main/res/layout/fragment_data_color.xml
+++ b/app/src/main/res/layout/fragment_data_color.xml
@@ -19,7 +19,7 @@
         android:id="@+id/data_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
 
@@ -42,6 +42,8 @@
         android:textStyle="bold|italic"
         android:textSize="@dimen/size_title_fragment_data_color"
         android:textColor="@color/navigationBarColor"/>
+
+
 
     <TextView
         android:id="@+id/hex_format_color"
@@ -140,7 +142,7 @@
         android:layout_width="101dp"
         android:layout_height="101dp"
         android:background="@color/background"
-        android:layout_marginTop="87dp"
+        android:layout_marginTop="82dp"
         android:layout_marginLeft="220dp"
         />
 
@@ -148,19 +150,45 @@
         android:id="@+id/image_color"
         android:layout_width="95dp"
         android:layout_height="95dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="85dp"
         android:layout_marginLeft="223dp"
         />
+
+        <TextView
+            android:id="@+id/name_item"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="198dp"
+            android:layout_marginLeft="225dp"
+            android:textSize="@dimen/size_text_format_data_color"
+            android:textStyle="bold|italic"
+            android:text="Name:"
+            android:maxLength="12"
+            android:textColor="@color/navigationBarColor"/>
+
+
     <!--android:background="#FF80AB"-->
 
-    <Button
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/hsl_data_text_view"
+        android:textStyle="bold|italic"
+        android:textColor="@color/navigationBarColor"
+        android:text="@string/data_color_button_send_result"/>
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="255dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/hsl_data_text_view"
-        android:text="@string/data_color_button_send_result"
+        android:src="@drawable/btn_check_blue"
         android:id="@+id/send_result" />
 
     <ImageView
