--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,10 +60,12 @@
             android:id="@+id/gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            fab:fab_addButtonColorNormal="@color/colorPrimary"
+            fab:fab_addButtonColorNormal="@color/white"
             fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
+
             fab:fab_size="mini"
             fab:fab_title="@string/main_activity_button_gallery"/>
+        <!--fab:fab_icon="@drawable/btn_check_blue"-->
 
         <cc.trity.floatingactionbutton.FloatingActionButton
             android:id="@+id/camera"
