--- a/app/src/main/res/layout/fragment_data_color_transparent.xml
+++ b/app/src/main/res/layout/fragment_data_color_transparent.xml
@@ -6,6 +6,7 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
+    android:id="@+id/transparent_layout"
     android:background="@color/blue_semi_transparent">
 </RelativeLayout>
 
