--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,10 +62,9 @@
             android:layout_height="wrap_content"
             fab:fab_addButtonColorNormal="@color/white"
             fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
-
+            fab:fab_icon="@drawable/ic_gallery"
             fab:fab_size="mini"
             fab:fab_title="@string/main_activity_button_gallery"/>
-        <!--fab:fab_icon="@drawable/btn_check_blue"-->
 
         <cc.trity.floatingactionbutton.FloatingActionButton
             android:id="@+id/camera"
@@ -74,6 +73,7 @@
             fab:fab_addButtonColorNormal="@color/colorPrimary"
             fab:fab_addButtonColorPressed="@color/colorPrimaryDark"
             fab:fab_size="mini"
+            fab:fab_icon="@drawable/ic_camera"
             fab:fab_title="@string/main_activity_button_camera"/>
 
     </cc.trity.floatingactionbutton.FloatingActionsMenu>
