--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -26,6 +26,8 @@
     <string name="main_activity_button_camera">Камера</string>
     <string name="data_color_button_send_result">Отправить результат\n на Сервер</string>
     <string name="main_activity_information">SD карта не доступна</string>
+    <string name="name_of_item_fragment_name_copmosition">Введите название лота</string>
+    <string name="name_of_item">Название лота</string>
 
     <!-- data in fragment_data_color-->
 
