added method save data and image to db

--- a/app/src/main/res/layout/fragment_name_composition.xml
+++ b/app/src/main/res/layout/fragment_name_composition.xml
@@ -28,8 +28,8 @@
         android:textColor="@color/navigationBarColor"
         android:textColorHint="@color/navigationBarColor"
         android:hint="@string/name_of_item"
-        android:textSize="20dp"
-        />
+        android:textSize="20dp"/>
+
 
     <ImageView
         android:layout_width="65dp"
