--- a/app/src/main/res/layout/fragment_card_view.xml
+++ b/app/src/main/res/layout/fragment_card_view.xml
@@ -25,8 +25,11 @@
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="212dp"
-            android:src="@drawable/blogimage"
+
+            android:layout_gravity="center|center_vertical"
             android:gravity="top" />
+
+        <!--android:src="@drawable/blogimage"-->
 
         <RelativeLayout
             android:layout_width="match_parent"
