--- a/app/src/main/res/layout/fragment_data_color.xml
+++ b/app/src/main/res/layout/fragment_data_color.xml
@@ -181,7 +181,7 @@
         android:text="@string/data_color_button_send_result"/>
 
 
-    <ImageView
+    <!--<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="255dp"
@@ -189,7 +189,17 @@
         android:layout_marginTop="30dp"
         android:layout_below="@+id/hsl_data_text_view"
         android:src="@drawable/btn_check_blue"
-        android:id="@+id/send_result" />
+        android:id="@+id/send_result" />-->
+
+    <com.example.lenovo.colouranalyzer.common.TransImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="255dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/hsl_data_text_view"
+            android:src="@drawable/btn_check_blue"
+            android:id="@+id/send_result" />
 
     <ImageView
         android:id="@+id/image_transparent"
