--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -34,7 +34,7 @@
     <string name="title_information_network">Передача мобильных данных отключена</string>
     <string name="message_information_network">Включите передачу пакетных данных или воспользуйтесь Wi-Fi для завершения этого действия.</string>
     <string name="button_ok_information_network">ОК</string>
-    <string name="checbox__title_seve_to_sql">Сохранить IP</string>
+    <string name="checbox__title_seve_to_sql">Сохранить название сервера</string>
     <string name="send_to_sql_button">Sing in</string>
 
 
