added some method for send information to SQL Server

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:id="@+id/transparent_color_fragment"
         />
 
+
     <cc.trity.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/multiple_actions_down"
         android:layout_width="wrap_content"
@@ -87,6 +88,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/send_data_fragment"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/response_sql_fragment"/>
 
 
 
