--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -37,7 +37,8 @@
     <string name="checbox__title_seve_to_sql">Сохранить название сервера</string>
     <string name="send_to_sql_button">Sing in</string>
     <string name="heade_layout_title">Лоты переименованные в SQL</string>
-    <string name="response_sql_fragment_information_about_task"> Все данные были успешно отправлены</string>
+    <string name="send_data_to_server_fragment_information_about_task"> Все данные были успешно отправлены</string>
+    <string name="send_data_to_server_fragment_information_about_found_sql"> SQL Сервер не найден или не\n отвечает</string>
 
 
 
