--- a/app/src/main/res/layout/fragment_name_composition.xml
+++ b/app/src/main/res/layout/fragment_name_composition.xml
@@ -100,6 +100,15 @@
         android:layout_marginTop="300dp"
         android:src="@drawable/btn_ok_green"/>-->
 
+    <com.example.lenovo.colouranalyzer.common.TransImageButton
+        android:layout_width="37dp"
+        android:layout_height="30dp"
+        android:id="@+id/barcode_scanner"
+        android:layout_marginTop="152dp"
+        android:layout_marginLeft="297dp"
+        android:src="@drawable/ic_barcode_scanner"/>
+
+
 
 
 
