--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
@@ -22,7 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HEX:"
+        tools:text="HEX:"
         android:textSize="10dp"
         android:paddingTop="30dp"
         android:layout_alignParentLeft="true"
@@ -34,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/item_hex"
-        android:text="#ff80ab"
+        tools:text="#ff80ab"
         android:textSize="10dp"
         android:paddingTop="30dp"
         android:layout_alignParentLeft="true"
@@ -44,7 +45,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RGB:"
+        tools:text="RGB:"
         android:textSize="10dp"
         android:paddingTop="50dp"
         android:layout_alignParentLeft="true"
@@ -56,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/item_rgb"
-        android:text="255,128,171"
+        tools:text="255,128,171"
         android:textSize="10dp"
         android:paddingTop="50dp"
         android:layout_alignParentLeft="true"
@@ -66,7 +67,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HSV:"
+        tools:text="HSV:"
         android:textSize="10dp"
         android:paddingTop="30dp"
         android:layout_alignParentLeft="true"
@@ -77,7 +78,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="340  50  100"
+        tools:text="340  50  100"
         android:id="@+id/item_hsv"
         android:textSize="10dp"
         android:paddingTop="30dp"
@@ -88,7 +89,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HSL:"
+        tools:text="HSL:"
         android:textSize="10dp"
         android:paddingTop="50dp"
         android:layout_alignParentLeft="true"
@@ -99,7 +100,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0.94  1.00  0.75"
+        tools:text="0.94  1.00  0.75"
         android:textSize="10dp"
         android:id="@+id/item_hsl"
         android:paddingTop="50dp"
@@ -111,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/item_name_of_item"
-        android:text="Name of the lot"
+        tools:text="Name of the lot"
         android:paddingTop="8dp"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="150dp"
@@ -125,7 +126,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="02.12.2015"
+        tools:text="02.12.2015"
         android:id="@+id/item_data"
         android:paddingTop="8dp"
         android:layout_alignParentRight="true"
