--- a/app/src/main/res/layout/fragment_data_color.xml
+++ b/app/src/main/res/layout/fragment_data_color.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
-    android:background="@color/white">
+    android:background="@color/background">
 
     <ProgressBar
         android:layout_width="40dp"
@@ -21,7 +21,7 @@
         android:id="@+id/data_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
 
 
